Update README with more info & disclaimer